Removed target folder from local repository + code refactor